finished custom circuit row

--- a/thearch_android_test/thearch_android_test.fsproj
+++ b/thearch_android_test/thearch_android_test.fsproj
@@ -69,6 +69,8 @@
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\values\Styles.xml" />
     <AndroidResource Include="Resources\drawable\splash.png" />
+    <AndroidResource Include="Resources\layout\CircuitProblems.axml" />
+    <AndroidResource Include="Resources\layout\CircuitProblemsRow.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\AboutAssets.txt" />
