--- a/thearch_android_test/thearch_android_test.fsproj
+++ b/thearch_android_test/thearch_android_test.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.fs" />
     <Compile Include="SectorsAdapter.fs">
     </Compile>
+    <Compile Include="RoutesActivity.fs" />
     <Compile Include="CircuitProblemsActivity.fs" />
     <Compile Include="MainActivity.fs" />
     <Compile Include="SplashScreen.fs" />
@@ -71,6 +72,8 @@
     <AndroidResource Include="Resources\drawable\splash.png" />
     <AndroidResource Include="Resources\layout\CircuitProblems.axml" />
     <AndroidResource Include="Resources\layout\CircuitProblemsRow.axml" />
+    <AndroidResource Include="Resources\layout\RoutePicker.axml" />
+    <AndroidResource Include="Resources\drawable\null_selector.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\AboutAssets.txt" />
