--- a/thearch_android_test/Properties/AndroidManifest.xml
+++ b/thearch_android_test/Properties/AndroidManifest.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="thearch_android_test.thearch_android_test">
 	<uses-sdk />
-	<application android:label="thearch_android_test">
+	<application android:label="thearch_android_test" android:icon="@drawable/icon">
 	</application>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
